# microgpt-rs

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  DESIGN.md  PLAN-MLX.md  PLAN.md
microgpt-cuda/: Cargo.toml
microgpt-cuda/src/: main.rs
microgpt-mlx/: Cargo.toml
microgpt-mlx/src/: main.rs
microgpt-scale/: Cargo.toml
microgpt-scale/src/: main.rs
src/: main.rs
